Fixed for browser loading, all good now!

--- a/test/htmlLoadTest.html
+++ b/test/htmlLoadTest.html
@@ -16,7 +16,7 @@
 
             var loadLibraries = function()
             {
-                common.asyncLoadLibraries({'neatjs': '../', 'cppnjs': '../cppnjs/'}, function(err){
+                common.asyncLoadLibraries({'neatjs': '..', 'cppnjs': '../cppnjs'}, function(err){
 
                     for(var library in common.scripts)
                     {
